--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ wheels/
 # venv
 venv
 
+#temp
+temp
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
