--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.2",
     "nuqs": "^2.8.1",
     "react": "^19.1.1",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14",
